--- a/web/package.json
+++ b/web/package.json
@@ -10,8 +10,7 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
-		"test": "vitest",
-		"server": "tsx watch ./server.ts"
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@emotion/react": "11.11.0",
@@ -32,9 +31,6 @@
 	"devDependencies": {
 		"@testing-library/jest-dom": "5.16.5",
 		"@testing-library/react": "14.0.0",
-		"@types/body-parser": "1.19.2",
-		"@types/json-server": "0.14.4",
-		"@types/jsonwebtoken": "9.0.1",
 		"@types/node": "18.13.0",
 		"@types/react": "18.0.27",
 		"@types/react-dom": "18.0.10",
@@ -42,7 +38,6 @@
 		"@typescript-eslint/eslint-plugin": "5.51.0",
 		"@typescript-eslint/parser": "5.51.0",
 		"@vitejs/plugin-react": "3.1.0",
-		"body-parser": "1.20.2",
 		"eslint": "8.0.1",
 		"eslint-config-prettier": "8.6.0",
 		"eslint-import-resolver-alias": "1.1.2",
@@ -54,12 +49,8 @@
 		"eslint-plugin-react-hooks": "4.6.0",
 		"jest-styled-components": "7.1.1",
 		"jsdom": "21.1.0",
-		"json-server": "0.17.2",
-		"json-server-auth": "2.1.0",
-		"jsonwebtoken": "9.0.0",
 		"prettier": "2.8.4",
-		"tsx": "3.12.3",
-		"typescript": "*",
+		"typescript": "5.1.3",
 		"vite": "4.1.0",
 		"vitest": "0.28.5"
 	}
