--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
 	},
 	"scripts": {
 		"dev": "vite",
+    "start": "node dist/",
 		"build": "tsc && vite build",
 		"preview": "vite preview",
 		"test": "vitest"
