--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3.9'
+version: "3.9"
 
 services:
   db:
-    container_name: '${APP_NAME}-db'
+    container_name: "${APP_NAME}-db"
     image: postgres
     volumes:
       - storage_db:/var/lib/postgres/data
