--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.9"
 
 services:
   db:
-    container_name: "${APP_NAME}-db"
-    image: postgres
+    container_name: "${APP_NAME}.db"
+    image: postgres:15-alpine
     volumes:
       - storage_db:/var/lib/postgres/data
     ports:
-      - 5432:5432
+      - ${PG_PORT}:5432
     environment:
       POSTGRES_USER: ${PG_USER}
       POSTGRES_PASSWORD: ${PG_PASSWORD}
