remove delete hours

--- a/api/.adonisrc.json
+++ b/api/.adonisrc.json
@@ -1,5 +1,11 @@
 {
   "typescript": true,
+  "metaFiles": [
+    {
+      "pattern": "resources/templates/*",
+      "realoadServer": false
+    }
+  ],
   "commands": [
     "./commands",
     "@adonisjs/core/build/commands/index.js",
