--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   db:
-    container_name: "${APP_NAME}.db"
+    container_name: "${APP_NAME}_dev"
     image: postgres:15-alpine
     volumes:
       - storage_db:/var/lib/postgres/data
