export data to csv, json and xlsx

--- a/api/.adonisrc.json
+++ b/api/.adonisrc.json
@@ -2,7 +2,7 @@
   "typescript": true,
   "metaFiles": [
     {
-      "pattern": "resources/templates/**/*.csv",
+      "pattern": "resources/templates/**/*.(csv|xlsx|json)",
       "realoadServer": false
     }
   ],
