--- a/web/package.json
+++ b/web/package.json
@@ -15,10 +15,10 @@
 		"@hookform/resolvers": "3.0.1",
 		"@mui/material": "5.14.8",
 		"@mui/x-date-pickers": "6.13.0",
+		"@phosphor-icons/react": "2.0.15",
 		"@tanstack/react-query": "4.29.7",
 		"axios": "1.3.5",
 		"luxon": "3.4.3",
-		"phosphor-react": "1.4.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "7.43.9",
