fix: change a new version

--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "7.43.9",
+		"react-imask": "7.2.0",
 		"react-router-dom": "6.10.0",
 		"react-toastify": "9.1.2",
 		"uuid": "9.0.0",
